# rgx

./: Cargo.toml
examples/: button.rs  cursors.rs  hover.rs  picker.rs
src/: application.rs  clock.rs  gfx.rs  lib.rs  platform.rs  timer.rs  ui.rs
src/gfx/: color.rs  renderer.rs  shape2d.rs  sprite2d.rs
src/gfx/backends/: gl.rs
src/math/: algebra.rs  traits.rs  transform.rs
src/platform/: dummy.rs  glfw.rs
src/ui/: canvas.rs  context.rs  env.rs  tests.rs  text.rs  widgets.rs
src/ui/text/: font.rs
src/ui/widgets/: align.rs  button.rs  click.rs  controller.rs  hover.rs  hstack.rs  painter.rs  pod.rs  sized_box.rs  widget.rs  zstack.rs
